deployment/authentication-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\CIT\3495\videostreaming\deployment\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: authentication
  name: authentication
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: authentication
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: D:\CIT\3495\videostreaming\deployment\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/video-streaming-system-project1-apinetwork: "true"
        io.kompose.service: authentication
    spec:
      containers:
        - image: phamminhtan2k2/video-streaming-authentication:v1
          name: authentication
          resources: {}
      restartPolicy: Always
status: {}
