deployment/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\CIT\3495\videostreaming\deployment\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: D:\CIT\3495\videostreaming\deployment\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/video-streaming-system-project1-apinetwork: "true"
        io.kompose.service: db
    spec:
      containers:
        - args:
            - --default-authentication-plugin=mysql_native_password
          image: mysql:5.7
          name: db
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: project1-db
      restartPolicy: Always
      volumes:
        - name: project1-db
          persistentVolumeClaim:
            claimName: project1-db
status: {}
