deployment/client.yaml
# Load Balancer
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: client
---
# Pods
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deploy
  labels:
    app: client
spec:
  selector:
    matchLabels:
      app: client
  #replicas: 2
  minReadySeconds: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: client
    spec:
      terminationGracePeriodSeconds: 1
      volumes:
        - name: videos-storage
          persistentVolumeClaim:
            claimName: shared-pvc
        - name: base-url
          configMap:
            name: base-url
      containers:
        - name: client
          image: phamminhtan2k2/video-streaming-client:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: '/app/public/videos'
              name: videos-storage
