deployment/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deploy
  labels:
    app: db
spec:
  selector:
    matchLabels:
      app: db
  minReadySeconds: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      terminationGracePeriodSeconds: 1
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: db-pvc
        - name: db-env
          configMap:
            name: db-env
      containers:
        - name: db
          image: mysql:5.7
          volumeMounts:
            - mountPath: '/var/lib/mysql'
              name: db-storage
          ports:
            - containerPort: 3306
