deployment/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\CIT\3495\videostreaming\deployment\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
    - name: "4010"
      port: 4010
      targetPort: 80
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
