deployment/upload_video-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\CIT\3495\videostreaming\deployment\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: upload-video
  name: upload_video
spec:
  ports:
    - name: "4004"
      port: 4004
      targetPort: 3000
  selector:
    io.kompose.service: upload-video
status:
  loadBalancer: {}
