deployment/uploads.yaml
# Load Balancer
apiVersion: v1
kind: Service
metadata:
  name: uploads
spec:
  type: LoadBalancer
  ports:
    - port: 4004
      targetPort: 3000
  selector:
    app: uploads
---
# Pods
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uploads-deploy
  labels:
    app: uploads
spec:
  selector:
    matchLabels:
      app: uploads
  minReadySeconds: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: uploads
    spec:
      terminationGracePeriodSeconds: 1
      containers:
        - name: uploads
          image: phamminhtan2k2/video-streaming-uploads:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
